...
    final bloc = Provider.of<LoginBloc>(context, listen: false);
    return StreamBuilder<String>(
        //here we will listen loginEmail to check updation using getter
        stream: bloc.phoneNumber,
        builder: (context, snapshot) {
          return TextFormField(
            key: const Key('mobileKey'),
            onChanged: bloc.changePhoneNumber,
            controller: _textEditController,
            maxLength: 10,
            decoration: InputDecoration(
              errorText: snapshot.hasError ? snapshot.error.toString() : null,
              errorStyle: TextStyle(
...
          //           BlocProvider.of<LoginBloc>(context)
          //               .add(LoginEventRequested(phone: _phone));
          //           Navigator.of(context).pushNamed(OTP_SCREEN_ROUTE);
          //         },
          // );
          return ElevatedButton(
            key: const Key('tapLogin'),
            style: ButtonStyle(
              backgroundColor: snapshot.hasError
                  ? MaterialStateProperty.all(Colors.grey[400])
                  : MaterialStateProperty.all(!snapshot.hasData
                      ? Colors.grey[400]
                      : Colors.yellow[600]),
...
