...
                      });
                    }
                  }
                },
                builder: (context, state) {
                  return ElevatedButton(
                    key: const Key('tapotpverify'),
                    style: ButtonStyle(
                      backgroundColor: MaterialStateProperty.all(
                          Color.fromRGBO(249, 216, 21, 1)),
                      foregroundColor: MaterialStateProperty.all(
                          Color.fromRGBO(32, 33, 34, 1)),
                    ),
...
      ),
    );
  }

  Widget getOtpTextField(BuildContext context) {
    return OTPTextField(
      key: const Key('otpentered'),
      length: 6,
      width: width * 0.91,
      fieldWidth: width * 0.109,
      style: TextStyle(fontSize: 17),
      textFieldAlignment: MainAxisAlignment.spaceAround,
      fieldStyle: FieldStyle.underline,
...
